--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,15 @@
 	"version": "0.2.0",
     "configurations": [
         {
+          "name": "Debug ANTLR4 grammar",
+          "type": "antlr-debug",
+          "request": "launch",
+          "input": "antlr_debug_input.txt",
+          "grammar": "src/parser/JSON.g4",
+          "printParseTree": true,
+          "visualParseTree": true
+        },
+        {
             "name": "Extension",
             "type": "extensionHost",
             "request": "launch",
@@ -16,7 +25,8 @@
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
             ],
-            "preLaunchTask": "npm-watch"
+            // TODO npm watch doesn't work
+            "preLaunchTask": "npm-compile"
         },
         {
             "name": "Extension Tests (vsc)",
@@ -35,7 +45,7 @@
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
             ],
-            "preLaunchTask": "npm-watch"
+            "preLaunchTask": "npm-compile"
         },
         {
             "type": "node",
