--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,11 @@
 .vscode/**
 .vscode-test/**
+.github/**
+.*
 out/test/**
 out/**/*.map
+doc/**
 src/**
-.gitignore
 tsconfig.json
 vsc-extension-quickstart.md
 tslint.json
