sets version to 4.1.0

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sort-json-array",
   "displayName": "Sort JSON/JS array",
   "description": "Sorts JSON/JS arrays by value, object property or custom function",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "publisher": "fvclaus",
   "license": "BSD-3-Clause",
   "engines": {
@@ -100,7 +100,8 @@
     "test:benchmark": "npm run compile && mocha --recursive --ui tdd --timeout 5000 'out/**/*.benchmark-test.js'",
     "lint": "eslint \"src/**/*.ts\"",
     "antlr4:generate": "rimraf src/parser/generated && antlr4ts -Dlanguage=JavaScript -no-listener -visitor -Xexact-output-dir -o src/parser/generated src/parser/JSON.g4",
-    "vsce:package": "npx vsce package"
+    "vsce:package": "npx vsce package",
+    "vsce:publish": "npx vsce publish"
   },
   "dependencies": {
     "antlr4ts": "^0.5.0-alpha.4",
