--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         vscode-version: ['1.72.0', '1.100.0']
-      fail-fast: true
+      fail-fast: false
 
     runs-on: ${{ matrix.os }}
     steps:
